refactored to use config file

--- a/TestHost/App.config
+++ b/TestHost/App.config
@@ -3,4 +3,58 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
+  
+  
+  <system.serviceModel>
+    <behaviors>  
+      <endpointBehaviors>  
+        <behavior name="testEndPointBehavior">  
+           <callbackDebug includeExceptionDetailInFaults="true" />  
+         </behavior>  
+      </endpointBehaviors>  
+      <serviceBehaviors>  
+        <behavior name="testServiceBehavior">  
+          <serviceMetadata httpGetEnabled="true" />  
+        </behavior>  
+      </serviceBehaviors>  
+  
+    </behaviors>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="basicBindingConfig" closeTimeout="00:01:00" />
+        <binding name="myBindingConfiguration2" closeTimeout="00:02:00" />
+        <binding closeTimeout="00:03:00" />
+        <!-- Default binding for basicHttpBinding -->
+      </basicHttpBinding>
+    </bindings>
+    <services>
+      <service name="WCFServices.Service"  behaviorConfiguration="testServiceBehavior" >
+        <endpoint
+           address="" binding="basicHttpBinding"
+           bindingConfiguration="basicBindingConfig"
+           contract="WCFServices.IService"  />
+         <endpoint 
+           address="mex"
+           binding="mexHttpBinding"
+           contract="IMetadataExchange" />
+        <!--<endpoint
+           address="myAddress2" binding="basicHttpBinding"
+           bindingConfiguration="myBindingConfiguration2"
+           contract="MyContract" />
+        <endpoint
+           address="myAddress3" binding="basicHttpBinding"
+           contract="MyContract" />-->
+      <host>
+        <baseAddresses>
+          <add baseAddress="http://localhost:8000/TestService"/>
+        </baseAddresses>
+      </host>
+      </service>
+   
+    </services>
+   
+  </system.serviceModel>
+  
+  
+  
 </configuration>
