--- a/WCFClient/App.config
+++ b/WCFClient/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_IService" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8000/TestService" binding="basicHttpBinding"
+                bindingConfiguration="BasicHttpBinding_IService" contract="TestServiceClient.IService"
+                name="BasicHttpBinding_IService" />
+        </client>
+    </system.serviceModel>
 </configuration>
