--- a/WCFServices/WCFServices.csproj
+++ b/WCFServices/WCFServices.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomServiceBehavior.cs" />
+    <Compile Include="CustomServiceInspector.cs" />
     <Compile Include="IService.cs" />
     <Compile Include="MyFormatter.cs" />
     <Compile Include="MyInspector.cs" />
     <Compile Include="MyInvoker.cs" />
     <Compile Include="MyOperationBypasser.cs" />
+    <Compile Include="ParameterInspector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
   </ItemGroup>
