--- a/TestHost/App.config
+++ b/TestHost/App.config
@@ -6,6 +6,11 @@
   
   
   <system.serviceModel>
+    <extensions>
+     <behaviorExtensions>
+       <add name="messageBehaviorExtension" type="WCFServices.MessageBehaviourExtension,WCFServices,Version=1.0.0.0,Culture=neutral,PublicKeyToken=null"/>
+     </behaviorExtensions>
+   </extensions>
     <behaviors>  
       <endpointBehaviors>  
         <behavior name="testEndPointBehavior">  
@@ -14,7 +19,8 @@
       </endpointBehaviors>  
       <serviceBehaviors>  
         <behavior name="testServiceBehavior">  
-          <serviceMetadata httpGetEnabled="true" />  
+          <serviceMetadata httpGetEnabled="true" /> 
+        <messageBehaviorExtension />
         </behavior>  
       </serviceBehaviors>  
   
