--- a/WCFServices/WCFServices.csproj
+++ b/WCFServices/WCFServices.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -46,6 +47,8 @@
     <Compile Include="CustomServiceBehavior.cs" />
     <Compile Include="CustomServiceInspector.cs" />
     <Compile Include="IService.cs" />
+    <Compile Include="MessageBehaviorExtension.cs" />
+    <Compile Include="MessageInspector.cs" />
     <Compile Include="MyFormatter.cs" />
     <Compile Include="MyInspector.cs" />
     <Compile Include="MyInvoker.cs" />
@@ -53,6 +56,7 @@
     <Compile Include="ParameterInspector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service.cs" />
+    <Compile Include="TestRequestInterceptor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
