--- a/TestHost/App.config
+++ b/TestHost/App.config
@@ -16,11 +16,12 @@
         <behavior name="testEndPointBehavior">  
            <callbackDebug includeExceptionDetailInFaults="true" />  
          </behavior>  
+        
       </endpointBehaviors>  
       <serviceBehaviors>  
         <behavior name="testServiceBehavior">  
           <serviceMetadata httpGetEnabled="true" /> 
-        <messageBehaviorExtension />
+        <!--<messageBehaviorExtension />-->
         </behavior>  
       </serviceBehaviors>  
   
@@ -34,29 +35,16 @@
       </basicHttpBinding>
     </bindings>
     <services>
-      <service name="WCFServices.Service"  behaviorConfiguration="testServiceBehavior" >
-        <endpoint
-           address="" binding="basicHttpBinding"
-           bindingConfiguration="basicBindingConfig"
-           contract="WCFServices.IService"  />
-         <endpoint 
-           address="mex"
-           binding="mexHttpBinding"
-           contract="IMetadataExchange" />
-        <!--<endpoint
-           address="myAddress2" binding="basicHttpBinding"
-           bindingConfiguration="myBindingConfiguration2"
-           contract="MyContract" />
-        <endpoint
-           address="myAddress3" binding="basicHttpBinding"
-           contract="MyContract" />-->
-      <host>
-        <baseAddresses>
-          <add baseAddress="http://localhost:8000/TestService"/>
-        </baseAddresses>
-      </host>
+      <service behaviorConfiguration="testServiceBehavior" name="WCFServices.MessageInterceptorDemoService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicBindingConfig"
+          name="simpleEndPoint" contract="WCFServices.IMessageIterceptorDemoService" />
+        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8000/TestService" />
+          </baseAddresses>
+        </host>
       </service>
-   
     </services>
    
   </system.serviceModel>
