--- a/WCFClient/App.config
+++ b/WCFClient/App.config
@@ -6,13 +6,13 @@
     <system.serviceModel>
         <bindings>
             <basicHttpBinding>
-                <binding name="BasicHttpBinding_IService" />
+                <binding name="simpleEndPoint" />
             </basicHttpBinding>
         </bindings>
         <client>
             <endpoint address="http://localhost:8000/TestService" binding="basicHttpBinding"
-                bindingConfiguration="BasicHttpBinding_IService" contract="TestServiceClient.IService"
-                name="BasicHttpBinding_IService" />
+                bindingConfiguration="simpleEndPoint" contract="TestServiceClient.IService"
+                name="simpleEndPoint" />
         </client>
     </system.serviceModel>
 </configuration>
