--- a/WCFClient/App.config
+++ b/WCFClient/App.config
@@ -11,7 +11,7 @@
         </bindings>
         <client>
             <endpoint address="http://localhost:8000/TestService" binding="basicHttpBinding"
-                bindingConfiguration="simpleEndPoint" contract="TestServiceClient.IService"
+                bindingConfiguration="simpleEndPoint" contract="MessageInterceptorDemoClient.IService"
                 name="simpleEndPoint" />
         </client>
     </system.serviceModel>
