--- a/WCFClient/WCFClient.csproj
+++ b/WCFClient/WCFClient.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service References\TestServiceClient\Reference.cs">
+    <Compile Include="Service References\MessageInterceptorDemoClient\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -57,11 +57,11 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="Service References\TestServiceClient\Service.wsdl" />
-    <None Include="Service References\TestServiceClient\TestService.xsd">
+    <None Include="Service References\MessageInterceptorDemoClient\MessageInterceptorDemoService.wsdl" />
+    <None Include="Service References\MessageInterceptorDemoClient\TestService.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\TestServiceClient\TestService1.xsd">
+    <None Include="Service References\MessageInterceptorDemoClient\TestService1.xsd">
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
@@ -75,19 +75,19 @@
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadataStorage Include="Service References\TestServiceClient\" />
+    <WCFMetadataStorage Include="Service References\MessageInterceptorDemoClient\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\TestServiceClient\TestService.disco" />
+    <None Include="Service References\MessageInterceptorDemoClient\TestService.disco" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\TestServiceClient\configuration91.svcinfo" />
+    <None Include="Service References\MessageInterceptorDemoClient\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\TestServiceClient\configuration.svcinfo" />
+    <None Include="Service References\MessageInterceptorDemoClient\configuration.svcinfo" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\TestServiceClient\Reference.svcmap">
+    <None Include="Service References\MessageInterceptorDemoClient\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
