code clean-up and rest services addition.

--- a/TestHost/App.config
+++ b/TestHost/App.config
@@ -6,42 +6,55 @@
   
   
   <system.serviceModel>
-    <extensions>
+    <!--<extensions>
      <behaviorExtensions>
        <add name="messageBehaviorExtension" type="WCFServices.MessageBehaviourExtension,WCFServices,Version=1.0.0.0,Culture=neutral,PublicKeyToken=null"/>
      </behaviorExtensions>
-   </extensions>
+   </extensions>-->
     <behaviors>  
       <endpointBehaviors>  
-        <behavior name="testEndPointBehavior">  
+        <behavior name="TestEndPointBehavior">  
            <callbackDebug includeExceptionDetailInFaults="true" />  
-         </behavior>  
-        
+         </behavior>
+        <behavior name="RestEndPointBehavior">
+          <webHttp/>
+        </behavior>
       </endpointBehaviors>  
       <serviceBehaviors>  
         <behavior name="testServiceBehavior">  
           <serviceMetadata httpGetEnabled="true" /> 
         <!--<messageBehaviorExtension />-->
-        </behavior>  
-      </serviceBehaviors>  
-  
+        </behavior>
+        <behavior name="WCFRestService">
+          <serviceMetadata  httpGetEnabled="true" httpsGetEnabled="true"/>
+          <serviceDebug includeExceptionDetailInFaults="false"/>
+        </behavior>
+      </serviceBehaviors>
+        
     </behaviors>
     <bindings>
       <basicHttpBinding>
         <binding name="basicBindingConfig" closeTimeout="00:01:00" />
-        <binding name="myBindingConfiguration2" closeTimeout="00:02:00" />
+        <binding name="basicBindingConfig-2" closeTimeout="00:02:00" />
         <binding closeTimeout="00:03:00" />
-        <!-- Default binding for basicHttpBinding -->
       </basicHttpBinding>
     </bindings>
     <services>
       <service behaviorConfiguration="testServiceBehavior" name="WCFServices.MessageInterceptorDemoService">
         <endpoint address="" binding="basicHttpBinding" bindingConfiguration="basicBindingConfig"
-          name="simpleEndPoint" contract="WCFServices.IMessageIterceptorDemoService" />
+          name="simpleEndPoint" contract="WCFServices.IMessageIterceptorDemoService"  behaviorConfiguration="TestEndPointBehavior"/>
         <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:8000/TestService" />
+          </baseAddresses>
+        </host>
+      </service>
+      <service name="WCFServices.CommonRestOperations" behaviorConfiguration="WCFRestService">
+        <endpoint address="" binding="webHttpBinding" contract="WCFServices.ICommonRestOperations" behaviorConfiguration="RestEndPointBehavior"></endpoint>
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8989/RestServices"/>
           </baseAddresses>
         </host>
       </service>
