--- a/TestHost/App.config
+++ b/TestHost/App.config
@@ -14,7 +14,7 @@
     <behaviors>  
       <endpointBehaviors>  
         <behavior name="TestEndPointBehavior">  
-           <callbackDebug includeExceptionDetailInFaults="true" />  
+           <!--<callbackDebug includeExceptionDetailInFaults="true" />-->  
          </behavior>
         <behavior name="RestEndPointBehavior">
           <webHttp/>
