--- a/WCFServices/WCFServices.csproj
+++ b/WCFServices/WCFServices.csproj
@@ -45,14 +45,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonRestOperations.cs" />
-    <Compile Include="Contracts\IMessageIterceptorDemoService.cs" />
+    <Compile Include="ServiceContracts\IMessageIterceptorDemoService.cs" />
     <Compile Include="CustomMessageFormatter.cs" />
     <Compile Include="CustomMessageInspector.cs" />
     <Compile Include="CustomOperationInvoker.cs" />
     <Compile Include="CustomOperationBypasser.cs" />
-    <Compile Include="Contracts\ICommonRestOperations.cs" />
+    <Compile Include="ServiceContracts\ICommonRestOperations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MessageInterceptorDemoService.cs" />
+    <Compile Include="DataContracts\SocialProfile.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
